[package]
name = "assets"
description = "Manages and loads asset libraries"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
utils = { workspace = true }
serialization = { workspace = true, features = ["toml"] }
image = { workspace = true }
rhai = { version = "1.22.2" }
tantivy = { version = "0.24.1", default-features = false, features = ["mmap"] }
walkdir = { version = "2.5.0" }
anyhow = { workspace = true }
bevy = { workspace = true }
semver = { version = "1.0.26", features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
hf = { version = "0.4.0", default-features = false }

[features]
default = []
dev = []
windows = []
linux = []
macos = []
