[package]
name = "logging"
description = "Handles configuring and executing logging through Bevy's logging system"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
config = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
bevy = { workspace = true, default-features = false, features = ["bevy_render"] }

[features]
default = []
dev = [
  "config/dev"
]
windows = [
  "config/windows"
]
linux = [
  "config/linux"
]
macos = [
  "config/macos"
]
