[package]
name = "utils"
description = "Crate containing helpers, macros and utilities for use in all other crates"
edition.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
utils_macros = { path = "macros" }
bevy = { workspace = true, features = ["bevy_log"] }
crossbeam-channel = "0.5.15"
semver = { version = "1.0.26", features = ["serde"] }

[features]
default = []
dev = [
]
windows = [
]
linux = [
]
macos = [
]
